[package]
name = "rrg"
description = "Rust rewrite of GRR."
version = "0.1.0"
authors = ["Łukasz Hanuszczak <hanuszczak@google.com>"]
edition = "2018"

[workspace]
members = [".", "./crates/rrg-macro", "./crates/rrg-proto"]

[dependencies]
rrg-macro = { path = "crates/rrg-macro/" }
rrg-proto = { path = "crates/rrg-proto/" }

argh = { version = "0.1.8" }
fleetspeak = { version = "0.3.1" }
humantime = { version = "2.1.0" }
libc = { version = "0.2.126" }
log = { version = "0.4.17", features = ["std"] }
protobuf = { version = "2.27.1" }
byteorder = { version = "1.3.4" }
regex = { version = "1.5.5" }
lazy_static = { version = "1.4.0" }

chrono = { version = "0.4.11", optional = true }
digest = { version = "0.10.5", optional = true }
flate2 = { version = "1.0.14", optional = true }
md-5 = { version = "0.10.5", optional = true }
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ioctls = { version = "0.6.1" }

proc-mounts = { version = "0.2.4", optional = true }
# TODO(https://github.com/google/rrg/issues/47): This should be a dev dependency
# but because of Cargo limitations [1] it has to be marked not as such. However,
# because it is hidden behind a feature flag, it should not be a big problem.
#
# [1]: https://github.com/rust-lang/cargo/issues/1596
fuse = { version = "0.3.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_System_ProcessStatus", "Win32_System_Registry"] }

[dev-dependencies]
rand = { version = "0.8.5" }
tempfile = { version = "3.3.0" }

[features]
default = [
    "action-insttime",
    "action-interfaces",
    "action-filesystems",
    "action-finder",
    "action-listdir",
    "action-metadata",
    "action-network",
    "action-stat",
    "action-timeline",
]

action-insttime = ["dep:chrono", "dep:proc-mounts"]
action-interfaces = []
action-filesystems = ["dep:proc-mounts"]
action-finder = ["dep:digest", "dep:md-5", "dep:sha1", "dep:sha2"]
action-listdir = []
action-metadata = []
action-network = []
action-stat = []
action-timeline = ["dep:flate2", "dep:sha2"]

test-chattr = []
test-setfattr = []
test-fuse = ["dep:fuse"]

[[example]]
name = "timeline"
required-features = ["action-timeline"]
