[workspace]
members = [
    "./crates/ospect",
    "./crates/rrg",
    "./crates/rrg-proto",
    "./crates/tsk",
    "./crates/tsk-sys",
    "./crates/winreg",
    "./crates/wmi",
]
resolver = "2"

[workspace.package]
version = "0.0.8"
authors = ["Łukasz Hanuszczak <hanuszczak@google.com>"]
edition = "2024"
