[package]
name = "rrg-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies.ospect]
path = "../ospect"

[dependencies.rrg-macro]
path = "../rrg-macro/"

[dependencies.winreg]
path = "../winreg"

[dependencies.log]
version = "0.4.8"

[dependencies.protobuf]
version = "~3.2.0"

[dev-dependencies.quickcheck]
version = "1.0.3"

[build-dependencies.protobuf-codegen]
version = "~3.2.0"

[build-dependencies.tempfile]
version = "3.1.0"
