[package]
name = "rrg-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies.ospect]
path = "../ospect"

[dependencies.winreg]
path = "../winreg"

[dependencies.log]
version = "0.4.22"

[dependencies.protobuf]
version = "3.7.2"

[dev-dependencies.quickcheck]
version = "1.0.3"

[build-dependencies.protobuf-codegen]
version = "3.7.2"

[build-dependencies.tempfile]
version = "3.13.0"
