[package]
name = "rrg"
description = "Rust rewrite of GRR."
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = [
    "action-get_system_metadata",
    "action-get_file_metadata",
    "action-get_file_contents",
    "action-grep_file_contents",
    "action-get_filesystem_timeline",
    "action-list_connections",
    "action-list_interfaces",
    "action-list_mounts",
    "action-get_winreg_value",
    "action-list_winreg_values",
    "action-list_winreg_keys",
    "action-query_wmi",
]

action-get_system_metadata = []
action-get_file_metadata = []
action-get_file_contents = ["dep:sha2"]
action-grep_file_contents = []
action-get_filesystem_timeline = ["dep:flate2", "dep:sha2"]
action-list_connections = []
action-list_interfaces = []
action-list_mounts = []
action-get_winreg_value = []
action-list_winreg_values = []
action-list_winreg_keys = []
action-query_wmi = []

test-setfattr = []
test-chattr = []
test-fuse = ["dep:fuse"]

[dependencies.ospect]
path = "../ospect"

[dependencies.rrg-macro]
path = "../rrg-macro"

[dependencies.rrg-proto]
path = "../rrg-proto"

[dependencies.winreg]
path = "../winreg"

[dependencies.wmi]
path = "../wmi"

[dependencies.argh]
version = "0.1.8"

[dependencies.fleetspeak]
version = "0.4.0"

[dependencies.humantime]
version = "2.1.0"

[dependencies.libc]
version = "0.2.126"

[dependencies.log]
version = "0.4.17"
features = [
    "std",
]

[dependencies.protobuf]
version = "~3.2.0"

[dependencies.byteorder]
version = "1.3.4"

[dependencies.regex]
version = "1.5.5"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.digest]
version = "0.10.5"
optional = true

[dependencies.flate2]
version = "1.0.14"
optional = true

[dependencies.md-5]
version = "0.10.5"
optional = true

[dependencies.sha1]
version = "0.10.5"
optional = true

[dependencies.sha2]
version = "0.10.6"
optional = true

# TODO(https://github.com/google/rrg/issues/47): This should be a dev dependency
# but because of Cargo limitations [1] it has to be marked not as such. However,
# because it is hidden behind a feature flag, it should not be a big problem.
#
# [1]: https://github.com/rust-lang/cargo/issues/1596
[target.'cfg(target_os = "linux")'.dependencies.fuse]
version = "0.3.1"
optional = true

[dev-dependencies.rand]
version = "0.8.5"

[dev-dependencies.tempfile]
version = "3.3.0"

[target.'cfg(target_family = "windows")'.dev-dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]
