[package]
name = "winreg"
version = "0.0.0"
authors.workspace = true
edition.workspace = true

description = "A small library for querying the Windows registry."
categories = ["windows"]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
]
