[package]
name = "wmi"
version = "0.0.0"
authors.workspace = true
edition.workspace = true

description = "A small library for running WQL queries."
categories = ["windows"]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_System_Variant",
    "Win32_System_Wmi",
]
